--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
+    "@angular/core": "^18.2.13",
     "@angular/forms": "^18.2.0",
+    "@angular/google-maps": "^19.0.1",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
