--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
+    "@angular/core": "^18.2.13",
     "@angular/forms": "^18.2.0",
+    "@angular/google-maps": "^19.0.1",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ng-select/ng-select": "^14.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "wordcloud": "^1.2.3",
