--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
@@ -19,11 +20,17 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "types": ["node", "jest", "@angular/core"],
+    "paths": {
+      "@angular/*": ["node_modules/@angular/*"]
+    },
     "lib": [
       "ES2022",
       "dom"
     ]
+    
   },
+  "include": ["src/**/*"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
